--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
 	<div class="container">
 		hi guoyaqi
 	</div>
+	<style>
+    .gc-comments {
+        font-size: 12px;
+    }
+    </style>
+    <script src="http://nimojs.github.io/github-comments/gc.js"></script>
+    <div class="gc-comments" data-repos="guoyaqi/resume" data-issues="1">
+        <div class="gc-comments-title">
+            评论
+        </div>
+        <div class="gc-comments-info">
+            想在此留下评论，请访问 <a href="issues_link">issues_link</a> 提交评论
+        </div>
+    </div>
 </body>
 </html>
